# book-lamp

./: .env.example  .gitignore  .lighthouserc.cjs  .pre-commit-config.yaml  AGENT_CONTEXT.md  DEPLOYMENT.md  DESIGN.md  GEMINI.md  README.md  app.py  compose.yaml  docker-compose.yml  mise.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  repro_libib.py  repro_proto_dos.py  repro_struct_dos.py  requirements.txt  subagents.yaml  test_overflow.py  tsconfig.json  vitest.config.ts
.agent/: README.md  skill_logger.py  view_skill_logs.py
.agent/skills/antigravity-swarm/: SKILL.md
.agent/skills/book-lamp-development/: SKILL.md
.agent/skills/librarian/: SKILL.md
.agent/skills/performance-engineer/: SKILL.md  examples.md
.agent/skills/python-tutor/: SKILL.md
.agent/skills/testing/: SKILL.md
.agent/skills/web-designer/: SKILL.md
.github/: dependabot.yml
.github/skills/python-tutor/: examples.md
.github/workflows/: ci.yml  e2e.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py
book_lamp/: app.py  config.py
book_lamp/routes/: __init__.py  history.py  recommendations.py  stats.py
book_lamp/services/: async_sqlite_storage.py  book_lookup.py  cache.py  job_queue.py  llm_client.py  mock_storage.py  pg_storage.py  recommendations.py  search.py  sheets_storage.py  sqlite_state_store.py
book_lamp/static/: base.css  books.css  button-feedback.js  enhanced-monitor.js  history.css  home.css  job-monitor.js  one_tap.js  recommendations.css  stats.css
book_lamp/templates/: about.html  add_book.html  author.html  base.html  book_detail.html  books.html  history.html  home.html  import_books.html  publisher.html  reading_list.html  stats.html  unauthorised.html  unauthorized.html
book_lamp/utils/: __init__.py  authors.py  books.py  libib_import.py  protobuf_patch.py  sorting.py
book_lamp/web/: __init__.py  common.py
docs/: postgres-migration.md
scripts/: lhci_actionable_report.py  migrate_sheets_to_pg.py  orchestrator.py  planner.py  run_lhci_server.py
services/: book_lookup.py
src/ts/: barcode-scanner.ts  base-ui.ts  book-detail.ts  button-feedback.ts  job-indicator.ts  job-tracker.ts  one_tap.ts  reading-list.ts  reading-records.ts  recommendations.ts
src/ts/tests/: barcode-scanner.test.ts  base-ui.test.ts  button-feedback.test.ts  job-indicator.test.ts  job-tracker.test.ts  reading-list.test.ts
templates/: books.html  unauthorized.html
tests/: conftest.py  test_async_sqlite_storage.py  test_author_page.py  test_bisac_backfill.py  test_books.py  test_books_buttons.py  test_categorization.py  test_history.py  test_libib_import.py  test_manual_entry.py  test_one_tap_auth.py  test_performance.py  test_pg_storage.py  test_reading_list.py  test_reading_record_edit.py  test_recommendations.py  test_recommendations_route.py  test_search.py  test_search_logic.py  test_search_route.py  test_settings.py  test_smoke.py  test_stats.py  test_sync_diagnostics.py
tests-e2e/: auth.spec.ts  books.spec.ts  global.setup.ts  history.spec.ts  home.spec.ts  import.spec.ts  performance.spec.ts  reading_list.spec.ts  robustness.spec.ts  stats.spec.ts
tests-e2e/assets/: libib_import.csv  libib_import_with_covers.csv
