[tool.poetry]
name = "book-lamp"
version = "0.1.0"
description = "Reading history."
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.13.7"
authlib = "1.6.4"
click = "8.3.0"
Flask = "3.1.2"
flask-sqlalchemy = "3.1.1"
python-dotenv = "1.1.1"
requests = "2.32.4"
psycopg2-binary = "2.9.10"
gunicorn = "23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
black = "25.9.0"
isort = "5.12.0"
mypy = "1.0.0"
bandit = "1.7.0"
ruff = "0.13.1"
pbr = "7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.ruff.lint]
ignore = ["E203"]
