[tool.poetry]
name = "book-lamp"
version = "0.1.0"
description = "Reading history."
readme = "README.md"
packages = [{include = "book_lamp"}]

[tool.poetry.dependencies]
python = "^3.13"
authlib = "1.6.6"
click = "8.3.0"
Flask = "3.1.3"
python-dotenv = "1.1.1"
requests = "2.32.4"
gunicorn = "23.0.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.108.0"
protobuf = ">=6.33.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
black = "25.9.0"
isort = "5.12.0"
mypy = "^1.11.0"
bandit = "1.7.0"
ruff = "0.13.1"
pbr = "7.0.1"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"
types-protobuf = "^6.32.1.20251210"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.ruff.lint]
ignore = ["E203"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "(^\\.venv/|^tests/fixtures/)"
