[tool.poetry]
name = "book-lamp"
version = "0.1.0"
description = "Reading history."
readme = "README.md"
packages = [{include = "book_lamp"}]

[tool.poetry.dependencies]
python = "^3.13"
psycopg = {extras = ["binary"], version = "3.3.4"}
psycopg-pool = "3.3.1"
alembic = "1.13.0"
click = "8.3.0"
Flask = "3.1.3"
python-dotenv = "1.2.2"
requests = "2.33.0"
gunicorn = "23.0.0"
google-auth = "2.43.0"
openai = "2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "5.0.0"
black = "26.3.1"
isort = "5.12.0"
mypy = "1.11.0"
bandit = "1.7.0"
ruff = "0.13.1"
pbr = "7.0.1"
pre-commit = "4.3.0"
types-requests = "2.32.4.20250913"
types-protobuf = "6.32.1.20251210"
pytest-docker = "3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.ruff.lint]
ignore = ["E203"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "(^\\.venv/|^tests/fixtures/)"
